--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ li {
 }
 
 img {
+  height: auto;
   display: block;
   max-width: 100%;
 }
@@ -64,7 +65,7 @@ a {
 }
 
 .title::after {
-  content: "";
+  content: '';
   display: block;
   width: 1.5rem;
   height: 1.5rem;
